[tool.poetry]
name = "async-tutorial"
version = "0.1.0"
description = ""
authors = ["Muzaffer Cıkay <muzaffercky@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.5"
fastapi = "0.104.1"
uvicorn = {version = "0.24.0", extras = ["standard"]}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
